--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <div class="titleWrapper">
 
             <div class="title">
-                ANAGRAMMATIX
+                Trivia
             </div>
 
             <div class="buttons">
